--- a/package.json
+++ b/package.json
@@ -7,15 +7,20 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "chart.js": "^3.2.0",
+    "child_process": "^1.0.2",
     "prop-types": "^15.7.2",
+    "python-shell": "^3.0.0",
     "react": "^17.0.2",
     "react-autosize-textarea": "^7.1.0",
+    "react-chartjs-2": "^3.0.3",
     "react-daum-postcode": "^2.0.6",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-star-ratings": "^2.3.0",
+    "selenium-webdriver": "^4.0.0-beta.3",
     "styled-components": "^5.2.3",
     "styled-reset": "^4.3.4",
     "web-vitals": "^1.0.1"
