--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.2",
     "react-autosize-textarea": "^7.1.0",
     "react-chartjs-2": "^3.0.3",
+    "react-csv-reader": "^3.3.0",
     "react-daum-postcode": "^2.0.6",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
