--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fullpage/react-fullpage": "^0.1.19",
     "@nivo/core": "^0.69.0",
     "@nivo/radar": "^0.69.0",
     "@testing-library/jest-dom": "^5.11.4",
@@ -11,6 +12,7 @@
     "axios": "^0.21.1",
     "chart.js": "^3.2.0",
     "child_process": "^1.0.2",
+    "infinite-react-carousel": "^1.2.11",
     "prop-types": "^15.7.2",
     "python-shell": "^3.0.0",
     "react": "^17.0.2",
