--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "@fullpage/react-fullpage": "^0.1.19",
     "@nivo/core": "^0.69.0",
+    "@nivo/pie": "^0.69.0",
     "@nivo/radar": "^0.69.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "apexcharts": "^3.26.2",
     "axios": "^0.21.1",
     "chart.js": "^3.2.0",
     "child_process": "^1.0.2",
