--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "infinite-react-carousel": "^1.2.11",
     "prop-types": "^15.7.2",
     "python-shell": "^3.0.0",
+    "re-resizable": "^6.9.0",
     "react": "^17.0.2",
     "react-autosize-textarea": "^7.1.0",
     "react-chartjs-2": "^3.0.3",
@@ -27,6 +28,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-star-ratings": "^2.3.0",
+    "react-wordcloud": "^1.2.7",
     "selenium-webdriver": "^4.0.0-beta.3",
     "styled-components": "^5.2.3",
     "styled-reset": "^4.3.4",
