--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-scripts": "4.0.3",
     "react-star-ratings": "^2.3.0",
     "react-wordcloud": "^1.2.7",
+    "reactjs-popup": "^2.0.4",
     "selenium-webdriver": "^4.0.0-beta.3",
     "styled-components": "^5.2.3",
     "styled-reset": "^4.3.4",
